apps/platform-system/kube-prometheus-stack/manifests/kube-prometheus-stack-grafana.httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: platform-system
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  parentRefs:
    - name: gateway
      namespace: platform-system
      sectionName: https
  hostnames:
    - grafana.edgard.org
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
